--- a/Aulas/Pessoal/Html,Css Feliz/components/tittle.css
+++ b/Aulas/Pessoal/Html,Css Feliz/components/tittle.css
@@ -1,11 +1,11 @@
-#boxTittle {
+.boxTittle {
   display: inline-block;
   background-color: #3a4042;
   padding: 42px 40px;
   text-align: center;
 }
 
-#boxTittle h1 {
+.tittle {
   font-family: 'Press Start 2P', cursive;
   font-size: 30px;
   color: #f25a70;
@@ -14,7 +14,7 @@
   margin-bottom: 28px;
 }
 
-h2 {
+.subtittle {
   font-family: 'Press Start 2P';
   color: white;
   font-style: normal;
