personal stylization and section creation

--- a/Aulas/Pessoal/Html,Css Feliz/components/action.css
+++ b/Aulas/Pessoal/Html,Css Feliz/components/action.css
@@ -11,7 +11,7 @@
 .action::before {
   content: '';
   display: inline-block;
-  background-color: #f25a70;
+  background-color: #f59098;
   height: 10px;
   width: 10px;
   margin-right: 10px;
