--- a/Aulas/Pessoal/Html,Css Feliz/style.css
+++ b/Aulas/Pessoal/Html,Css Feliz/style.css
@@ -9,7 +9,40 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: #7c5e99;
-  border-bottom: 10px solid black;
+  background-color: #78a0c3;
+  border-bottom: 10px solid #56629e;
   padding: 10px 20px;
+}
+
+.header::before {
+  content: '';
+  position: absolute;
+  background: rgb(255, 215, 215);
+  background: linear-gradient(
+    36deg,
+    rgba(255, 215, 215, 1) 20%,
+    rgba(254, 232, 245, 1) 61%,
+    rgba(120, 160, 195, 1) 68%
+  );
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 82px;
+  z-index: 1;
+}
+
+.logo {
+  font-family: 'Press Start 2P', cursive;
+  display: inline-block;
+  font-size: 40px;
+  padding: 12px 12px;
+  color: #f59098;
+  text-shadow: 6px 6px #56629e;
+  z-index: 2;
+  right: 30;
+  transition: 3s cubic-bezier(1, 0.38, 0.26, 1.73);
+}
+
+.logo:hover {
+  transform: translateY(700px) rotate(180deg);
 }
