--- a/section.css
+++ b/section.css
@@ -1,5 +1,5 @@
 .banner {
-  background: url(../images/background.jpg) no-repeat;
+  background: url(background.jpg) no-repeat;
   background-size: 100%;
   height: 810px;
   border-bottom: 10px solid #423b6e;
