--- a/style.css
+++ b/style.css
@@ -46,3 +46,98 @@ body {
 .logo:hover {
   transform: translateY(700px) rotate(180deg);
 }
+
+.action {
+  display: inline-flex;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+  text-decoration: none;
+  margin-right: 30px;
+}
+
+.action::before {
+  content: '';
+  display: inline-block;
+  background-color: #f59098;
+  height: 10px;
+  width: 10px;
+  margin-right: 10px;
+}
+
+.button {
+  display: inline-block;
+  background-color: #f59098;
+  box-shadow: 5px 5px 0px black;
+  margin-right: 0;
+  padding: 18px 20px;
+  transition: transform 900ms;
+
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.button:hover {
+  transform: translateX(10px) rotate(10deg) translateY(5px);
+}
+
+.banner {
+  background: url(background.jpg) no-repeat;
+  background-size: 100%;
+  height: 810px;
+  border-bottom: 10px solid #423b6e;
+}
+
+.sectionComponents {
+  top: 12%;
+  margin-left: 50px;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+}
+
+#download {
+  position: absolute;
+  top: 130px;
+  left: 450px;
+}
+#download:hover {
+  transform: translateX(-10px) rotate(-10deg) translateY(5px);
+}
+
+#contatos {
+  padding: 18px 38px;
+  text-align: center;
+  top: 130px;
+  right: 450px;
+  position: absolute;
+}
+
+.boxTittle {
+  display: inline-block;
+  /* background-color: #423b6e; */
+  padding: 42px 40px;
+  text-align: center;
+}
+
+.tittle {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 30px;
+  color: #f59098;
+  font-weight: 400;
+  text-shadow: 4px 4px 0 black;
+  margin-bottom: 18px;
+}
+
+.subtittle {
+  font-family: 'Press Start 2P';
+  color: #fee8f5;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  text-shadow: 4px 4px 0 black;
+}
