--- a/Aulas/Pessoal/Html,Css Feliz/components/section.css
+++ b/Aulas/Pessoal/Html,Css Feliz/components/section.css
@@ -1,31 +1,6 @@
-.banner {
-  background: url(../images/background.jpg) no-repeat;
-  background-size: 100%;
-  height: 810px;
-  border-bottom: 10px solid #423b6e;
-}
-
-.sectionComponents {
-  top: 12%;
-  margin-left: 50px;
-  display: flex;
-  justify-content: space-around;
-  position: relative;
-}
-
-#download {
-  position: absolute;
-  top: 130px;
-  left: 450px;
-}
-#download:hover {
-  transform: translateX(-10px) rotate(-10deg) translateY(5px);
-}
-
-#contatos {
-  padding: 18px 38px;
-  text-align: center;
-  top: 130px;
-  right: 450px;
-  position: absolute;
+.section {
+  padding-top: 50px;
+  padding-bottom: 100px;
+  background-color: #fee8f5;
+  border-bottom: 10px solid #56629e;
 }
