small refatoration, add about section and carousel

--- a/Aulas/Pessoal/Html,Css Feliz/css/components/main-banner.css
+++ b/Aulas/Pessoal/Html,Css Feliz/css/components/main-banner.css
@@ -1,5 +1,5 @@
-.banner {
-  background: url(../images/background.jpg) no-repeat;
+.main-banner {
+  background: url(../../images/background.jpg) no-repeat;
   background-size: 100%;
   height: 100vh;
   border-bottom: 10px solid #423b6e;
