--- a/Aulas/Pessoal/Html,Css Feliz/css/components/main-tittle.css
+++ b/Aulas/Pessoal/Html,Css Feliz/css/components/main-tittle.css
@@ -7,7 +7,7 @@
 }
 
 .main-tittle {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', sans-serif;
   font-size: 30px;
   color: #f59098;
   font-weight: 400;
